--- a/shopmanager/flashsale/pay/templates/pay/mrefundconfirm.html
+++ b/shopmanager/flashsale/pay/templates/pay/mrefundconfirm.html
@@ -67,7 +67,9 @@
 		{% elif refund.status == 4 or sale_refund.status == 5 %}
 		<p>亲，您的退货申请正在处理中，请将包裹及时寄回方便售后客服给您处理！</p>
 		{% elif refund.status == 6 %}
-		<p>亲，您的售后申请处理已完成，退款款项将返回到你付款时选择的支付方式里，请及时查看！</p>
+		<p>亲，您的售后申请已受理，退款款项将返回到你付款时选择的支付方式里，请及时查看！</p>
+		{% elif refund.status == 7 %}
+		<p>亲，你的售后订单处理已完成，请及时查看支付的帐户里的金额！</p>
 		{% else %}
 		<p>退款申请已关闭，如有疑问请联系在线客服！</p>
 		{% endif %}
