--- a/shopmanager/flashsale/pay/templates/pay/mindex.html
+++ b/shopmanager/flashsale/pay/templates/pay/mindex.html
@@ -41,7 +41,7 @@
   <div id="p_list">
   {% for product in products.results %}
     <div class="holder">
-      <a id="p{{ product.id }}" class="wrapper " href="../p/{{ product.id }}/" target="_top">
+      <a id="p{{ product.id }}" class="wrapper {% if product.sale_out %}sale_out{% endif %}" href="../p/{{ product.id }}/" target="_top">
       <div class="image" style="height:240px">
       <img src="{{ product.pic_path }}"><span>已抢光</span></div>
       <div class="name">{{ product.name }}</div>
@@ -66,7 +66,7 @@
 <script>
   var from_top  = 80;
   var nav_fix   = from_top;
-  var page_height = 1000;
+  var page_height = 800;
   
   $(document).ready(function(){
     $('.ui-loader').remove();
@@ -135,7 +135,7 @@
     var price = object.agent_price;//售价
     var price_o = object.std_sale_price;//原价
     var price_change = parseInt(Math.random()*2)==1?true:false;//是否有降价
-    var sold_out = parseInt(Math.random()*3)==1?true:false;//是否已售完
+    var sold_out = object.sale_out;//是否已售完
 
     var width = $('#p_list').width()/2-8;
 
@@ -151,7 +151,7 @@
     ht += '<div class="name">' + name + '</div>';
     ht += '<div class="price">￥<span>' + price + '</span></div>';
     ht += '<div class="price_o" ';
-    if (!price_change){ht += 'style="display:none"'};
+    //if (!price_change){ht += 'style="display:none"'};
     ht += '>￥<span>' + price_o + '</span>&nbsp;</div>';
     ht += '</a>';
     ht += '</div>';
