--- a/shopmanager/flashsale/pay/static/style/main.css
+++ b/shopmanager/flashsale/pay/static/style/main.css
@@ -92,17 +92,18 @@ a:hover {
 #p_list .wrapper .image span {
   display: none;
   position: absolute;
-  width: 66px;
-  height: 66px;
-  left: 50%;
-  top: 50%;
+  width: 120px;
+  height: 120px;
+  left: 40%;
+  top: 40%;
   margin-left: -33px;
   margin-top: -33px;
-  border-radius: 50px;
+  border-radius: 100px;
   background-color: rgba(0, 0, 0, 0.5);
   color: #ffffff;
-  line-height: 66px;
+  line-height: 120px;
   text-align: center;
+  font-size:20px;
 }
 #p_list .wrapper .name {
   font-size: 13px;
