--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dinghuo_base.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dinghuo_base.html
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     {% block meta %} {% endblock %}
     <title>{% block title %}{% endblock %}</title>
-{#    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css" rel="stylesheet" type="text/css"/>#}
     <!-- Bootstrap -->
-    <link href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap3.2.0.min.css" rel="stylesheet">
     {#    <link href="{{ STATIC_URL }}css/common.css" rel="stylesheet">#}
     <link rel="stylesheet" href="{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css"/>
-    <srcipt src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js"></srcipt>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+    {#<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>#}
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -20,6 +18,10 @@
       <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
 
     <![endif]-->
+<script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js"></script>
+<script src='{{ STATIC_URL }}jquery/addons/jquery.form.js'></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-3.2.0.min.js"></script>
     {% block head_script %}
 
     {% endblock %}
@@ -34,20 +36,11 @@
 
 {% endblock %}
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="http://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
-<script src='{{ STATIC_URL }}jquery/addons/jquery.form.js'></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
 
 {#    <script src="{{ STATIC_URL }}admin/js/admin/RelatedObjectLookups.js" type="text/javascript"></script>#}
 {% block tail_script %}
 {% endblock %}
 
-{% block footer %}
-    <script type="text/javascript">
-        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fb311e9cda9474b2df9ecb6fca89661db' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-{% endblock %}
 </body>
 </html>
