--- a/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
@@ -23,14 +23,14 @@
 
 <div class="row">
   <div class="col-xs-4">
-    <a href="/m/?day={{ prev_day }}"><< 前一天</a>
+    <a href="/m/m/?day={{ prev_day }}"><< 前一天</a>
   </div>
   <div class="col-xs-4">
     <p>{{ target_date }}</p>
   </div>
   <div class="col-xs-4">
     {% if next_day %}
-    <a href="/m/?day={{ next_day }}">后一天 >></a>
+    <a href="/m/m/?day={{ next_day }}">后一天 >></a>
     {% endif %}
   </div>
 </div>
