--- a/shopmanager/flashsale/clickrebeta/templates/shopstats.html
+++ b/shopmanager/flashsale/clickrebeta/templates/shopstats.html
@@ -33,14 +33,14 @@
 
     <div class="row">
         <div class="col-xs-4">
-            <a href="/sale/rebeta/shopstats/?pk={{ pk }}&day={{ prev_day }}"><< 前一天</a>
+            <a href="/sale/rebeta/?pk={{ pk }}&day={{ prev_day }}"><< 前一天</a>
         </div>
         <div class="col-xs-4">
             <p>{{ target_date }}</p>
         </div>
         <div class="col-xs-4">
             {% if next_day %}
-                <a href="/sale/rebeta/shopstats/?pk={{ pk }}&day={{ next_day }}">后一天 >></a>
+                <a href="/sale/rebeta/?pk={{ pk }}&day={{ next_day }}">后一天 >></a>
             {% endif %}
         </div>
     </div>
@@ -51,8 +51,6 @@
             <th>openid</th>
             <th>订单id</th>
             <th>订单金额</th>
-            <th>分享人数</th>
-            <th>类别</th>
             <th>提成</th>
             </thead>
             <tbody>
@@ -61,27 +59,24 @@
                     <td>{{ item.linkid }}</td>
                     <td>{{ item.openid }}</td>
                     <td>{{ item.wxorderid }}</td>
-                    <td>{{ item.wxorderamount }}</td>
-                    <td>{{ item.sharepeoplecount }}</td>
-                    <td>{{ item.agencylevel }}</td>
-                    <td>{{ item.tichengcount }}</td>
+                    <td align="center">{{ item.wxorderamount }}</td>
+                    <td align="center">{{ item.tichengcount }}</td>
                 </tr>
             {% endfor %}
             </tbody>
             <tfoot>
             <tr>
                 <td colspan="3"></td>
-                <td><input id="total_order_num" type="text"
+                <td align="right"><input id="total_order_num" type="text"
                            {% if countdata %}value="{{ countdata.orderamountcount }}" {% endif %}readonly/></td>
-                <td colspan="2"></td>
-                <td><input id="total_ticheng_num" type="text" {% if countdata %}
+                <td align="right"><input id="total_ticheng_num" type="text" {% if countdata %}
                            value="{{ countdata.todayamountcount }}"{% endif %} readonly/></td>
             </tr>
             </tfoot>
         </table>
     </div>
 
-    <form action="/sale/rebeta/shopstats/" method="get" id="id-form">
+    <form action="/sale/rebeta/" method="get" id="id-form">
         <input type="hidden" name="pk" id="id-pk"/>
         <input type="hidden" name="day" value="{{ target_date }}"/>
     </form>
@@ -89,6 +84,7 @@
 {% endblock %}
 
 {% block tail_script %}
+    <script src="{{ STATIC_URL }}jquery/jquery-2.1.1.min.js"></script>
     <script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $("#id-select").change(function () {
@@ -126,38 +122,37 @@
             }
         });
 
-        {#        var Calc_stats_data = function () {#}
-        {#            var total_ticheng_num = 0;#}
-        {#            var total_order_num = 0;#}
-        {##}
-        {#            var ticheng_num = 0;#}
-        {#            var order_num = 0;#}
-        {##}
-        {#            var rows = $("#state_table > tbody > tr");#}
-        {#            for (var i = 0; i < rows.length; i++) {#}
-        {#                row = rows[i];#}
-        {#                if (row.cells.length < 7) {#}
-        {#                    continue;#}
-        {#                }#}
-        {##}
-        {##}
-        {#                order_num = row.cells[3].innerHTML;#}
-        {#                ticheng_num = row.cells[6].innerHTML;#}
-        {##}
-        {##}
-        {#                if (parseInt(ticheng_num)) {#}
-        {#                    total_ticheng_num += parseInt(ticheng_num);#}
-        {#                }#}
-        {##}
-        {#                if (parseInt(order_num)) {#}
-        {#                    total_order_num += parseInt(order_num);#}
-        {#                }#}
-        {#            }#}
-        {##}
-        {#            $('#total_ticheng_num').val(total_ticheng_num.toString());#}
-        {#            $('#total_order_num').val(total_order_num.toString());#}
-        {##}
-        {#        }#}
+        var Calc_stats_data = function () {
+            var total_ticheng_num = 0;
+            var total_order_num = 0;
+
+            var ticheng_num = 0;
+            var order_num = 0;
+            var rows = $("#state_table > tbody > tr");
+
+            for (var i = 0; i < rows.length; i++) {
+                row = rows[i];
+                if (row.cells.length < 5) {
+                    continue;
+                }
+
+                order_num = row.cells[3].innerHTML;
+                ticheng_num = row.cells[4].innerHTML;
+
+
+                if (parseInt(ticheng_num)) {
+                    total_ticheng_num += parseInt(ticheng_num);
+                }
+
+                if (parseInt(order_num)) {
+                    total_order_num += parseInt(order_num);
+                }
+            }
+
+            $('#total_ticheng_num').val(total_ticheng_num.toString());
+            $('#total_order_num').val(total_order_num.toString());
+
+        }
 
         $("select[name='#state_table_length']").change(function (e) {
             e.preventDefault();
@@ -178,7 +173,6 @@
 
 
         $(function () {
-            console.log('abc');
             Calc_stats_data();
         });
 
