--- a/shopmanager/flashsale/clickcount/templates/click_count_base.html
+++ b/shopmanager/flashsale/clickcount/templates/click_count_base.html
@@ -8,7 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap -->
-    <link href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap3.2.0.min.css" rel="stylesheet">
 {#    <link href="{{ STATIC_URL }}css/common.css" rel="stylesheet">#}
     <link rel="stylesheet" href="{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css"/>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -16,7 +16,7 @@
     <script src="{{ STATIC_URL }}jquery/jquery-2.1.1.min.js"></script>
     <script src='{{ STATIC_URL }}jquery/addons/jquery.form.js'></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-3.2.0.min.js"></script>
     <script src="{{ STATIC_URL }}jquery/jquery-ui-1.11.1.min.js"></script>
     <!--[if lt IE 9]>
     <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
