--- a/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
@@ -44,13 +44,14 @@
     {% endif %}
     <li class="list-group-item">专属链接： <b>http://xiaolu.so/m/{{ pk }}/</b></li>
     <li class="list-group-item">点击人数: {{ click_num }}</li>
+    <li class="list-group-item"><span style="color:orange">点击补贴: {{ click_num }} * {{ click_price }} = ￥{{ click_pay }}</span>（培训通过后生效）</li>
     <li class="list-group-item">订单人数: {{ order_num }}</li>
     <li class="list-group-item"><span style="color:orange">订单金额: ￥{{ total_value }}</span></li>
     {% if agencylevel.pk > 1 %}
     {% if carry > 0 %}
-    <li class="list-group-item"><span style="color:orange">可得补贴: ￥{{ carry }}（待确认）</span></li>
+    <li class="list-group-item"><span style="color:orange">订单补贴: ￥{{ carry }}（待确认）</span></li>
     {% else %}
-    <li class="list-group-item"><span style="color:orange">可得补贴: {{ carry }}</span></li>
+    <li class="list-group-item"><span style="color:orange">订单补贴: {{ carry }}</span></li>
     {% endif %}
     {% endif %}
   </ul>
