--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/orderdetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/orderdetail.html
@@ -4,7 +4,7 @@
     <script type="text/javascript">
         function changestatus(id, button) {
 
-            var url = "/dinghuo/changestatus/";
+            var url = "/sale/dinghuo/changestatus/";
             var data = {"orderid": id, "func": button.value};
             var orderstatus = $("#order_status");
             var callback = function (res) {
