--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/addpurchasedetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/addpurchasedetail.html
@@ -4,7 +4,7 @@
     <srcipt src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js"></srcipt>
     <script type="text/javascript">
         function delcaogao() {
-            $.get("/dinghuo/delcaogao");
+            $.get("/sale/dinghuo/delcaogao");
             $("#drafttable thead").eq(0).nextAll().remove();
             document.getElementById("orderAdd").disabled = true;
         }
@@ -110,10 +110,10 @@
                     </table>
                     {% if drafts %}
                         <input class="btn btn-default" id="orderAdd" type="button" value="生成订单"
-                               onclick="window.location.href='/dinghuo/dingdan'"/>
+                               onclick="window.location.href='/sale/dinghuo/dingdan'"/>
                     {% else %}
                         <input class="btn btn-default" id="orderAdd" type="button" value="生成订单" disabled="disabled"
-                               onclick="window.location.href='/dinghuo/dingdan'"/>
+                               onclick="window.location.href='/sale/dinghuo/dingdan'"/>
                     {% endif %}
                     <input class="btn btn-default" id="orderAdd" type="button" value="删除草稿" onclick="delcaogao()"/>
                 </div>
