fix flashsale clickcount and xiaolumm

--- a/shopmanager/flashsale/xiaolumm/templates/stats.html
+++ b/shopmanager/flashsale/xiaolumm/templates/stats.html
@@ -33,14 +33,14 @@
 
 <div class="row">
   <div class="col-xs-4">
-    <a href="/m/stats/?pk={{ pk }}&day={{ prev_day }}"><< 前一天</a>
+    <a href="/m/clickcount/?pk={{ pk }}&day={{ prev_day }}"><< 前一天</a>
   </div>
   <div class="col-xs-4">
     <p>{{ target_date }}</p>
   </div>
   <div class="col-xs-4">
     {% if next_day %}
-    <a href="/m/stats/?pk={{ pk }}&day={{ next_day }}">后一天 >></a>
+    <a href="/m/clickcount/?pk={{ pk }}&day={{ next_day }}">后一天 >></a>
     {% endif %}
   </div>
 </div>
