mama_cashout.html

--- a/shopmanager/flashsale/xiaolumm/templates/mama_cashout.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_cashout.html
@@ -92,7 +92,7 @@
 
 </div>
 
-<div id="id-referal-list" style="margin-top:20px">
+<div id="id-referal-list" style="margin-top:20px;display:none">
   <div style="margin-top:20px">
   <h5>我推荐的代理：</h5>
     <table class="table table-bordered" style="margin-top:10px">
