--- a/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
@@ -46,6 +46,7 @@
     <li class="list-group-item">推荐人数： {{ referal_num }}（<a href="/m/cashout/">详情</a>）</li>
     <li class="list-group-item">点击人数： {{ click_num }}</li>
     <li class="list-group-item"><span style="color:orange">点击补贴： {{ click_num }} * {{ click_price }} = ￥{{ click_pay }}</span>（培训通过后生效）</li>
+    <li class="list-group-item"><span style="color:orange">订单人数： ￥{{ order_num }}</span></li>
     <li class="list-group-item"><span style="color:orange">订单金额： ￥{{ total_value }}</span></li>
     {% if agencylevel.pk > 1 %}
     {% if carry > 0 %}
